--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "cookies": "0.7.1",
     "keygrip": "1.0.2",
-    "qs": "6.5.2",
-    "merge-anything": "~4.0.1"
+    "merge-anything": "~4.0.1",
+    "qs": "^6.11.2"
   }
 }
